<resources>
    <string name="app_name">IKnowWhatToEat</string>
    <string name="passwordText">Enter password</string>
    <string name="emailText">Enter email</string>
    <string name="login_here">Login here</string>
    <string name="submit">Submit</string>
    <string name="registerText">Registration</string>
    <string name="signInText">Already Registered? Sign in here</string>
    <string name="signUpText">Not have an account? Sign up here</string>
    <string name="loginText">User Login</string>
    <string name="logoutText">Logout</string>
    <string name="title_activity_random">Random</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
